--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,9 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/App/",
+            "Domain\\": "app/Domain/",
+            "Support\\": "app/Support/"
         },
         "classmap": [
             "database/seeds",
