use npm to serve peerjs

--- a/Dockerfile.lan
+++ b/Dockerfile.lan
@@ -65,5 +65,8 @@ RUN rm -rf /var/www/html && ln -s /var/www/public /var/www/html
 RUN chown -R www-data:www-data /var/www/bootstrap/cache
 RUN chown -R www-data:www-data /var/www/storage
 
+RUN npm install peer -g
+RUN peerjs --port 6001 --key c2NrhKE1pYqDY2lRkdBL
+
 EXPOSE 80
 EXPOSE 6001
