--- a/docker-compose.lan.yml
+++ b/docker-compose.lan.yml
@@ -15,7 +15,7 @@ services:
       traefik.api.backend: "stop-covid-api"
       traefik.api.ws.port: 80
       traefik.api.frontend.rule: "Host:api.stop-covid.dev.soyhuce.lan"
-      traefik.peer.backend: "stop-covid-peer
+      traefik.peer.backend: "stop-covid-peer"
       traefik.peer.port: 6001
       traefik.peer.frontend.rule: "Host:peer.stop-covid.dev.soyhuce.lan"
 
