--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "rollbar/rollbar-laravel": "^6.0",
+        "soyhuce/rules": "^1.3",
         "soyhuce/service-provider-registrar": "^0.2.0",
         "spatie/data-transfer-object": "^2.0"
     },
