chore(env): update default environment file

--- a/.env.vagrant
+++ b/.env.vagrant
@@ -1,20 +1,19 @@
+APP_NAME="Stop-Covid API"
 APP_ENV=local
-
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://api.stop-covid.local
 
 LOG_CHANNEL=single
 
-DB_CONNECTION=pgsql
 DB_HOST=stop-covid.local
-DB_PORT=5432
 DB_DATABASE=vagrant
 DB_USERNAME=vagrant
 DB_PASSWORD=vagrant
 
+BROADCAST_DRIVER=log
 CACHE_DRIVER=array
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
@@ -24,3 +23,7 @@ REDIS_PORT=6379
 
 MAIL_DRIVER=log
 
+ROLLBAR_SERVER_TOKEN=
+
+APP_TOKEN=
+HORIZON_TOKEN=
