chore: remove useless files, rename everything to match "fanny backend" and translate from french to english

--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,14 @@ APP_NAME="Stop-Covid API"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://api.stop-covid.local
+APP_URL=
 
 LOG_CHANNEL=single
 
-DB_HOST=stop-covid.local
-DB_DATABASE=vagrant
-DB_USERNAME=vagrant
-DB_PASSWORD=vagrant
+DB_HOST=127.0.0.1
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=array
@@ -17,7 +17,7 @@ QUEUE_CONNECTION=redis
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
-REDIS_HOST=stop-covid.local
+REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
