--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@
 sonar.projectKey=stop-covid
 sonar.projectName=stop-covid
 sonar.projectVersion=0.0.0
-sonar.host.url=http://sonarqube.soyhuce.lan:9000
+sonar.host.url=
 # Path to the parent source code directory.
 sonar.sources=app,routes,resources/sass,resources/js
 # Language
