--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "rollbar/rollbar-laravel": "^6.0",
+        "soyhuce/laravel-8-factories": "^0.1.6",
         "soyhuce/next-ide-helper": "^0.1.1",
         "soyhuce/service-provider-registrar": "^0.3.0",
         "spatie/data-transfer-object": "^2.0"
@@ -50,7 +51,8 @@
         "psr-4": {
             "App\\": "app/App/",
             "Domain\\": "app/Domain/",
-            "Support\\": "app/Support/"
+            "Support\\": "app/Support/",
+            "Database\\Factories\\": "database/factories"
         },
         "classmap": [
             "database/seeds",
