--- a/composer.json
+++ b/composer.json
@@ -12,27 +12,26 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
-        "laravel/framework": "^7.0",
-        "laravel/horizon": "^4.3",
+        "laravel/framework": "^8.0",
+        "laravel/horizon": "^5.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0",
-        "rollbar/rollbar-laravel": "^6.0",
-        "soyhuce/laravel-8-factories": "^0.1.6",
-        "soyhuce/next-ide-helper": "^0.1.1",
-        "soyhuce/service-provider-registrar": "^0.3.0",
+        "laravel/ui": "^3.0",
+        "rollbar/rollbar-laravel": "^7.0",
+        "soyhuce/next-ide-helper": "^0.2",
+        "soyhuce/service-provider-registrar": "^1.0",
         "spatie/data-transfer-object": "^2.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
-        "facade/ignition": "^2.0",
+        "facade/ignition": "^2.3.6",
         "friendsofphp/php-cs-fixer": "^2.16",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "nunomaduro/larastan": "^0.5.2",
+        "nunomaduro/collision": "^5.0",
+        "nunomaduro/larastan": "^0.6",
         "nunomaduro/phpinsights": "^1.14",
         "phpunit/phpunit": "^9.0",
-        "soyhuce/dev-tools": "^2.4"
+        "soyhuce/dev-tools": "^3.1.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -55,13 +54,14 @@
             "Database\\Factories\\": "database/factories"
         },
         "classmap": [
-            "database/seeds",
+            "database/seeders",
             "database/factories"
         ]
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Tests\\": "tests/",
+            "Database\\Seeders\\": "database/seeders/"
         }
     },
     "minimum-stability": "dev",
@@ -102,12 +102,16 @@
         "test": [
             "./vendor/bin/phpunit --config=phpunit.xml"
         ],
+        "insights": [
+            "@php artisan insights --no-interaction -v --format=\\\\Soyhuce\\\\PhpInsights\\\\MarkdownFormatter > insights.md"
+        ],
         "analyse": [
             "./vendor/bin/phpstan analyse"
         ],
         "all": [
             "@cs",
-            "@test"
+            "@test",
+            "@insights"
         ]
     }
 }
